force-app/main/default/objects/AgentGov_Action_Log__c/AgentGov_Action_Log__c.object-meta.xml
<CustomObject>
    <description>Records every action an AI agent takes for audit trail and observability.</description>
    <label>Agent Action Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>