force-app/main/default/objects/AgentGov_Action_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
            <value>
                <fullName>API_Call</fullName>
                <label>API Call</label>
            </value>
            <value>
                <fullName>Flow_Trigger</fullName>
                <label>Flow Trigger</label>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>