force-app/main/default/objects/AgentGov_Action_Log__c/fields/Agent_Registration__c.field-meta.xml
<CustomField>
    <fullName>Agent_Registration__c</fullName>
    <label>Agent Registration</label>
    <type>Lookup</type>
    <description>The agent the row is about: the agent that acted or was refused, or, on Admin, Alert and System rows, the agent that was changed, alerted about, or concerned. Blank when no single agent is involved. The person behind an Admin row is its Created By.</description>
    <referenceTo>AgentGov_Registration__c</referenceTo>
    <relationshipLabel>Agent Action Logs</relationshipLabel>
    <relationshipName>Agent_Action_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>