force-app/main/default/objects/AgentGov_Action_Log__c/fields/Agent_Session__c.field-meta.xml
<CustomField>
    <fullName>Agent_Session__c</fullName>
    <label>Agent Session</label>
    <type>Lookup</type>
    <description>The session during which this action was performed</description>
    <referenceTo>AgentGov_Session__c</referenceTo>
    <relationshipLabel>Action Logs</relationshipLabel>
    <relationshipName>Action_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>