force-app/main/default/objects/AgentGov_Action_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <description>Correlation id of the request that produced this row: the caller's X-Correlation-Id header, the Correlation ID input of a Flow action, or one generated for the request or console action. Returned in every REST response, so a request can be traced to its audit rows. Blank on Alert rows and on rows written outside a request, such as by a scheduled job. Marked as an external id so it is indexed.</description>
</CustomField>