force-app/main/default/objects/AgentGov_Action_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>What happened, in words: the reason for a refusal, how many records a proxy request returned or wrote, an alert's summary, an administrator's change, a framework event, or the details a Flow passed to Log Agent Action. Report and Apex rows hold their usage counts as JSON.</description>
</CustomField>