force-app/main/default/objects/AgentGov_Action_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Why the action was refused or failed: the reason on a Denied row, the error on a Failure row, the first record error of a partly successful proxy write, or the underlying error on a System row.</description>
</CustomField>