force-app/main/default/objects/AgentGov_Action_Log__c/fields/Execution_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time_Ms__c</fullName>
    <label>Execution Time (ms)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Execution time in milliseconds</description>
</CustomField>