force-app/main/default/objects/AgentGov_Action_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Salesforce object API name the action was performed on</description>
</CustomField>