force-app/main/default/objects/AgentGov_Action_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
    <required>true</required>
    <description>The date and time the action was performed</description>
</CustomField>