force-app/main/default/objects/AgentGov_Action_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent_Registration__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Execution_Time_Ms__c</columns>
    <columns>Correlation_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>